k3s/30-logging/10-grafana/image-renderer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: grafana-image-renderer
  namespace: default
  name: grafana-image-renderer
spec:
  selector:
    matchLabels:
      app: grafana-image-renderer
  template:
    metadata:
      labels:
        app: grafana-image-renderer
    spec:
      containers:
        - image: grafana/grafana-image-renderer:latest
          name: grafana-image-renderer
          ports:
            - containerPort: 8081
              name: image-renderer
              protocol: TCP
          resources:
            limits:
              cpu: 1
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
  namespace: default
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: image-renderer
  selector:
    app: grafana-image-renderer
